# DynamicProgrammingCurrencyOptimizer

./: CMakeLists.txt  README.md
DynamicProgrammingOptimizer/: IOptimizer.h  Optimizer.cpp  Optimizer.h  OptimizerDynamic.cpp  OptimizerDynamic.h
HubstaffOptimizer/: HubstaffOptimizer.cpp  HubstaffOptimizer.h  HubstaffOptimizerDynamic.cpp  HubstaffOptimizerDynamic.h  IHubstaffOptimizer.h
Tests/: DynamicProgrammingBasicTests.cpp  HubstaffOptimizerBasicTests.cpp  HubstaffOptimizerDynamicBasicTests.cpp  NaiveSolutionTests.cpp  main.cpp
